--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set (SOURCES
 	sdl_image_api.cc
 	smart_pointers.cc
 	helpers.cc
+	jsoncpp.cpp
 )
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g")
