refactor rendering logic into a seperate class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set (SOURCES
 	jsoncpp.cpp
 	scene.cc
 	ui_object.cc
+	renderer.cc
 )
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g")
